fix: payment fieldset more readable

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,13 +40,6 @@ body {
     height: 12vh;
 }
 
-@media only screen and (max-width: 600px) {
-    .push {
-        /* height: 183px; */
-        height: 12vh;
-    }
-  }
-
 footer {
     width: 100%;
     background-color: #212529;
